--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mycompany.databaseapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -15,9 +17,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DatabaseListActivity">
-
-        </activity>
+        <activity android:name=".DatabaseListActivity"></activity>
         <activity android:name=".PlaceInformationActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -38,18 +38,18 @@
             android:name=".SmallMapActivity"
             android:label="@string/title_activity_small_map" />
         <activity android:name=".HomeActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <activity android:name=".MapBoxActivity"></activity>
     </application>
 
 </manifest>
